# BankParser

./: .gitignore  BANK_FORMATTERS_GUIDE.md  LICENSE  LOCAL_BANK_PROCESSING_GUIDE.md  MULTIPLE_RUNS_GUIDE.md  Makefile  PASSWORD_PROTECTION_GUIDE.md  PRODUCTION_CHECKLIST.md  PROJECT_MEMORY_DOCUMENTATION.md  README.md  TESTING_GUIDE.md  __init__.py  balance_validator.py  bank_formatters.py  bank_formatters_main.py  brand_config.py  config.py  deploy.py  epdf_processor.py  example_usage.py  local_epdf_processor.py  pdf_password_utils.py  pyproject.toml  requirements.txt  session_results_session_002.json  session_results_session_003.json  setup.py  text_formatter.py
BSA/session_001/extractedData/: session_001_extracted_data.json  session_001_extracted_data_formatted.csv  session_001_extracted_data_formatted.json
BSA/session_002/extractedData/: session_002_extracted_data.json  session_002_extracted_data_formatted.csv  session_002_extracted_data_formatted.json
BSA/session_003/extractedData/: session_003_extracted_data.json  session_003_extracted_data_formatted.json
bank_formatters/: __init__.py  base_formatter.py  hdfc_formatter.py  icici_formatter.py
docs/: conf.py  index.rst
tests/: __init__.py  test_epdf_processor.py
